src/test/deca/context/invalid/Objet/TooMuch_parameters1.deca
// Description:
//    test de faire plus de paramètre qu'indiqué
//
// Resultats:
//  22:4: The method set is called with a wrong signature 
//
// Historique:
//    cree le 20/01/2022

class A  {
    int i ;
    void set(int j){
        this.i = j ;
    }

}



{
    A a = new A() ;
    a.set(1 , 2) ;

}



